--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>ECommerce</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/images/freshcart-logo.svg" />
+    <link
+      rel="icon"
+      href="/images/freshcart-logo.svg"
+      class="bg-white rounded-lg"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
