--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
+  <!-- class="light" -->
   <head>
     <meta charset="utf-8" />
     <title>ECommerce</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="icon"
-      href="/images/freshcart-logo.svg"
-      class="bg-white rounded-lg"
-    />
+    <link rel="icon" href="/images/freshcart-logo.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
