--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!-- class="light" -->
+<html lang="en" class="dark">
+  <!--  -->
   <head>
     <meta charset="utf-8" />
     <title>ECommerce</title>
@@ -16,6 +16,68 @@
   </head>
 
   <body>
+    <button
+      data-popover-target="popover-user-profile"
+      type="button"
+      class="fixed -translate-x-7 focus:translate-x-0 duration-300 bottom-[80px] left-2 z-[100] text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+    >
+      <i class="text-xl fa-solid fa-gears"></i>
+    </button>
+    <div data-popper-arrow></div>
+    <div
+      data-popover
+      id="popover-user-profile"
+      role="tooltip"
+      class="z-[999] invisible inline-block text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-xs opacity-0 dark:text-gray-400 dark:bg-gray-800 dark:border-gray-600"
+    >
+      <div class="p-3">
+        <div class="flex flex-col gap-2 items-center mb-2">
+          <div>
+            <button
+              type="button"
+              class="text-blue-600 bg-white hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-xs px-3 py-1.5 dark:bg-white dark:hover:bg-green-700 dark:hover:text-white focus:outline-none dark:focus:ring-green-800"
+            >
+              <i class="text-xl fa-brands fa-linkedin"></i>
+            </button>
+          </div>
+          <div>
+            <button
+              (click)="dark()"
+              id="theme-toggle"
+              type="button"
+              class="bg-green-400 text-gray-100 dark:text-gray-50 hover:bg-green-700 dark:hover:bg-slate-700 focus:outline-none rounded-lg text-sm p-2.5"
+            >
+              <svg
+                id="theme-toggle-dark-icon"
+                class="hidden w-5 h-5"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
+                ></path>
+              </svg>
+              <svg
+                id="theme-toggle-light-icon"
+                class="hidden w-5 h-5"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div data-popper-arrow></div>
+    </div>
+
     <app-root></app-root>
   </body>
 </html>
