editeing in   responsive

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     />
   </head>
 
-  <body>
+  <body class="scroll-smooth">
     <button
       data-popover-target="popover-user-profile"
       type="button"
